fix(Timeline): vertical alignment and events Refs: #330

--- a/frontend/src/assets/css/utils.scss
+++ b/frontend/src/assets/css/utils.scss
@@ -53,16 +53,16 @@ $types: (
 }
 
 .h-100 {
-  height: 100%;
+  height: 100% !important;
 }
 
 .w-100 {
-  width: 100%;
+  width: 100% !important;
 }
 
 .max-hw {
-  max-height: 100%;
-  max-width: 100%;
+  max-height: 100% !important;
+  max-width: 100% !important;
 }
 
 .float-right {
